Comments: Added HTML filter test, fixed placeholder in dark mode

--- a/resources/sass/_tinymce.scss
+++ b/resources/sass/_tinymce.scss
@@ -34,7 +34,7 @@
   padding: 1rem;
   top: 4px;
   font-style: italic;
-  color: rgba(34,47,62,.5)
+  @include lightDark(color, rgba(34,47,62,.5), rgba(155,155,155,.5))
 }
 
 // Default styles for our custom root nodes
